--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -178,7 +178,7 @@ Otherwise, you can pick other options by using the kbd:[Up] or kbd:[Down] arrow 
 For now, try selecting the `addtogroup` command using the kbd:[Down] and kbd:[Tab] keys.
 TimeBook will complete the command like this:
 
-image::command-suggestions/user-guide-example-step2.png[width=50%]
+image::command-suggestions/user-guide-example-step2.png[width=50%,pdfwidth=50vw]
 
 *****
 image:./icons/lightbulb.png[] You can type an abbreviated version of any command as long as the letters are in order!
