--- a/docs/team/marcfyk.adoc
+++ b/docs/team/marcfyk.adoc
@@ -1,15 +1,14 @@
-= About Us - Marc Fong Yung Kit
+= Marc Fong Yung Kit -- Project Portfolio for Jarvis
 :site-section: AboutUs
 :relfileprefix: team/marcfyk
 :imagesDir: ../images
 :stylesDir: ../stylesheets
 
+== About Jarvis
+
 Jarvis was developed by the https://se-edu.github.io/docs/Team.html[se-edu] team.
 We are a team based in the http://www.comp.nus.edu.sg[School of Computing, National University of Singapore].
 
-== Marc Fong Yung Kit
-
-== About the project
 My team was tasked with contributing to a Command Line
 Interface (CLI) desktop address book application for our
 Software Engineering project. We decided morph the
@@ -21,3 +20,101 @@ finances and modules. The application will display all
 these information in their respective tabs to allow
 students to manage all these aspects of their life in
 this single application.
+
+This is a layout of how our application looks like:
+
+.Application Page Layout
+image::ug/StartUpUI.png[]
+
+In Figure 1, there are three boxes labelled with numbers.
+These are the shared GUI sections across all the features:
+
+1. Help Desk -- Unique to each feature's tab, it will
+display a list of commands you can use so you do not need
+to remember them all!
+
+2. Feature Tabs -- The four main features of Jarvis have
+been split into distinct tabs. The tab that you are
+currently on would be underlined in red, as seen in
+Figure 1.
+
+3. Command Result (top) & Command Entry (bottom) Boxes --
+Keying commands into the Command Entry Box will cause the
+respective Command Results to show in the Command Result
+Box. An invalid command will result in a red border around
+the Command Entry Box and an appropriate error message
+will be displayed in the Command Result Box.
+
+== My role
+My role was to implement the undo and redo feature of
+Jarvis and implement storage components to save the
+information stored in Jarvis to local storage.
+
+== Summary of Contributions
+
+* Features added:
+** Undo and redo feature
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/7[#7]
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/9[#9]
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/10[#10]
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/18[#18]
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/19[#19]
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/20[#20]
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/21[#21]
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/96[#96]
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/211[#211]
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/334[#334]
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/363[#363]
+* Project Management
+** Managed development progress with the team for the
+application for the several releases, from version 1.1
+to 1.5, that are available on Github.
+https://github.com/AY1920S1-CS2103T-T10-1/main/releases[List of versions]
+* Enhancement to existing features
+** Updated the Storage component to extend to all
+new features.
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/98[#98]
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/102[#102]
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/127[#127]
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/145[#145]
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/146[#146]
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/168[#168]
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/170[#170]
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/174[#174]
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/182[#182]
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/185[#185]
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/186[#186]
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/190[#190]
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/191[#191]
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/190[#190]
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/200[#200]
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/190[#190]
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/332[#332]
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/345[#345]
+* Documentation
+** Documented how `Model` component works,
+which handles interactions with Jarvis' data is managed.
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/369[#369]
+** Documented how `Storage` component works,
+which handles writing and reading Jarvis' data from
+local storage.
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/342[#342]
+** Documented design considerations faced when
+implementing the undo and redo feature.
+
+** Documented implementation details on undo and redo
+feature.
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/150[#150]
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/153[#153]
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/155[#155]
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/160[#160]
+https://github.com/AY1920S1-CS2103T-T10-1/main/pull/161[#161]
+* Community
+** Reviewed other PRs, with comments on improving code
+quality, defensive coding, testing, code design and code
+practices.
+* Code contributed
+** This is a link to my contributions displayed on
+https://nus-cs2103-ay1920s1.github.io/tp-dashboard/#search=marcfyk&sort=groupTitle&sortWithin=title&since=2019-09-06&timeframe=commit&mergegroup=false&groupSelect=groupByRepos&breakdown=false[RepoSense].
+** Here is a list of all my
+https://github.com/AY1920S1-CS2103T-T10-1/main/pulls?utf8=%E2%9C%93&q=is%3Apr+is%3Aclosed+author%3Amarcfyk[pull requests].
